recursion.cons.ismember.IsMember.scala.error
Erreur de compilation :
IsMember:4: error: not found: value False
    return(False)
           ^IsMember:7: error: not found: value True
    return (True)
            ^