recursion.cons.ismember.IsMember.scala.code
def isMember(l:List[Int], v:Int): Boolean = {
  if (l== Nil) {
    return(False)
  }
  if (v == l.head){
    return (True)
  }else{ 
    isMember(l.tail, v)
  }
}